new plots of all stations

--- a/Import_QCed_telemetry_to_netcdf_refactor.ipynb
+++ b/Import_QCed_telemetry_to_netcdf_refactor.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -129,12 +129,17 @@
      "data": {
       "text/plain": [
        "['BNS_15min_2013_2016_slim.txt',\n",
+       " 'BRP_15min_2013_2016_slim.txt',\n",
+       " 'BWH_15min_2013_2016_slim.txt',\n",
+       " 'CRG_15min_2013_2016_slim.txt',\n",
        " 'CRN_15min_2013_2016_slim.txt',\n",
        " 'FLG_15min_2014-2016_slim.txt',\n",
+       " 'FRG_15min_2013_2016_slim.txt',\n",
        " 'FRS_15min_2013_2016_slim.txt',\n",
        " 'HLN_15min_2014_2015_slim.txt',\n",
        " 'PWL_15min_2013_2016_slim.txt',\n",
-       " 'PYT_15min_2013_2016_slim.txt']"
+       " 'PYT_15min_2013_2016_slim.txt',\n",
+       " 'SIB_15min_2013_2016_slim.txt']"
       ]
      },
      "execution_count": 8,
@@ -250,12 +255,17 @@
      "output_type": "stream",
      "text": [
       "Processing BNS\n",
+      "Processing BRP\n",
+      "Processing BWH\n",
+      "Processing CRG\n",
       "Processing CRN\n",
       "Processing FLG\n",
+      "Processing FRG\n",
       "Processing FRS\n",
       "Processing HLN\n",
       "Processing PWL\n",
-      "Processing PYT\n"
+      "Processing PYT\n",
+      "Processing SIB\n"
      ]
     }
    ],
@@ -341,36 +351,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Air Moisture Content A\n",
-      "Incremental Precipitation B\n",
-      "Scalar Wind Speed B\n",
-      "Soil Temperature A\n",
-      "Soil Heat Flux  A\n",
-      "Total Pressure Unadjusted A\n",
-      "Snow Water Equivelent A\n",
-      "Upward Solar Radiation\n",
-      "Snow Depth QC value\n",
-      "Upward Terrestrial Rad\n",
-      "Scalar Wind Speed A\n",
-      "Incremental Precipitation A\n",
-      "Soil Moisture B\n",
-      "Soil Temperature C\n",
-      "Snow Depth A\n",
-      "Downward Terrestrial Rad\n",
-      "Soil Moisture C\n",
-      "Snow Layer Temperature A\n",
-      "Soil Temperature E\n",
-      "Net Radiation\n",
-      "Soil Moisture A\n",
-      "Downward Solar Radiation\n",
-      "Wind Direction at A\n",
-      "Total Pressure Adjusted to Sea-level\n",
-      "Air temperature A\n",
-      "Soil Temperature D\n",
-      "Soil Temperature B\n",
-      "Soil Moisture D\n",
       "Soil Moisture E\n",
-      "Albedo\n"
+      "Incremental Precipitation A\n",
+      "Air temperature A\n",
+      "Soil Moisture A\n",
+      "Soil Temperature A\n",
+      "Downward Terrestrial Rad\n",
+      "Soil Moisture B\n",
+      "Soil Temperature D\n",
+      "Soil Heat Flux  A\n",
+      "Soil Moisture D\n",
+      "Soil Temperature E\n",
+      "Snow Depth QC value\n",
+      "Upward Solar Radiation\n",
+      "Incremental Precipitation B\n",
+      "Total Pressure Adjusted to Sea-level\n",
+      "Air Temperature C\n",
+      "Downward Solar Radiation\n",
+      "Scalar Wind Speed B\n",
+      "Snow Layer Temperature A\n",
+      "Snow Water Equivelent A\n",
+      "Total Pressure Unadjusted A\n",
+      "Upward Terrestrial Rad\n",
+      "Soil Temperature B\n",
+      "Soil Moisture C\n",
+      "Air Moisture Content A\n",
+      "Soil Temperature C\n",
+      "Scalar Wind Speed A\n",
+      "Snow Depth A\n",
+      "Wind Direction at A\n"
      ]
     }
    ],
@@ -415,41 +424,40 @@
      "data": {
       "text/plain": [
        "<xarray.Dataset>\n",
-       "Dimensions:                               (station: 7, time: 131425)\n",
+       "Dimensions:                               (station: 12, time: 131425)\n",
        "Coordinates:\n",
-       "  * station                               (station) object 'BNS' 'CRN' 'FLG' ...\n",
+       "  * station                               (station) object 'BNS' 'BRP' 'BWH' ...\n",
        "  * time                                  (time) object 1349028000000000000 ...\n",
        "Data variables:\n",
-       "    Air Moisture Content A                (station, time) float64 nan nan ...\n",
-       "    Incremental Precipitation B           (station, time) float64 nan nan ...\n",
-       "    Scalar Wind Speed B                   (station, time) float64 nan nan ...\n",
-       "    Soil Temperature A                    (station, time) float64 nan nan ...\n",
-       "    Soil Heat Flux  A                     (station, time) float64 nan nan ...\n",
-       "    Total Pressure Unadjusted A           (station, time) float64 nan nan ...\n",
-       "    Snow Water Equivelent A               (station, time) float64 nan nan ...\n",
-       "    Upward Solar Radiation                (station, time) float64 nan nan ...\n",
-       "    Snow Depth QC value                   (station, time) float64 nan nan ...\n",
-       "    Upward Terrestrial Rad                (station, time) float64 nan nan ...\n",
-       "    Scalar Wind Speed A                   (station, time) float64 nan nan ...\n",
-       "    Incremental Precipitation A           (station, time) float64 nan nan ...\n",
-       "    Soil Moisture B                       (station, time) float64 nan nan ...\n",
-       "    Soil Temperature C                    (station, time) float64 nan nan ...\n",
-       "    Snow Depth A                          (station, time) float64 nan nan ...\n",
-       "    Downward Terrestrial Rad              (station, time) float64 nan nan ...\n",
-       "    Soil Moisture C                       (station, time) float64 nan nan ...\n",
-       "    Snow Layer Temperature A              (station, time) float64 nan nan ...\n",
-       "    Soil Temperature E                    (station, time) float64 nan nan ...\n",
-       "    Net Radiation                         (station, time) object nan nan nan ...\n",
-       "    Soil Moisture A                       (station, time) float64 nan nan ...\n",
-       "    Downward Solar Radiation              (station, time) float64 nan nan ...\n",
-       "    Wind Direction at A                   (station, time) float64 nan nan ...\n",
-       "    Total Pressure Adjusted to Sea-level  (station, time) float64 nan nan ...\n",
-       "    Air temperature A                     (station, time) float64 nan nan ...\n",
-       "    Soil Temperature D                    (station, time) float64 nan nan ...\n",
-       "    Soil Temperature B                    (station, time) float64 nan nan ...\n",
-       "    Soil Moisture D                       (station, time) float64 nan nan ...\n",
        "    Soil Moisture E                       (station, time) float64 nan nan ...\n",
-       "    Albedo                                (station, time) object nan nan nan ..."
+       "    Incremental Precipitation A           (station, time) float64 nan nan ...\n",
+       "    Air temperature A                     (station, time) float64 nan nan ...\n",
+       "    Soil Moisture A                       (station, time) float64 nan nan ...\n",
+       "    Soil Temperature A                    (station, time) float64 nan nan ...\n",
+       "    Downward Terrestrial Rad              (station, time) float64 nan nan ...\n",
+       "    Soil Moisture B                       (station, time) float64 nan nan ...\n",
+       "    Soil Temperature D                    (station, time) float64 nan nan ...\n",
+       "    Soil Heat Flux  A                     (station, time) float64 nan nan ...\n",
+       "    Soil Moisture D                       (station, time) float64 nan nan ...\n",
+       "    Soil Temperature E                    (station, time) float64 nan nan ...\n",
+       "    Snow Depth QC value                   (station, time) object nan nan nan ...\n",
+       "    Upward Solar Radiation                (station, time) float64 nan nan ...\n",
+       "    Incremental Precipitation B           (station, time) float64 nan nan ...\n",
+       "    Total Pressure Adjusted to Sea-level  (station, time) float64 nan nan ...\n",
+       "    Air Temperature C                     (station, time) float64 nan nan ...\n",
+       "    Downward Solar Radiation              (station, time) float64 nan nan ...\n",
+       "    Scalar Wind Speed B                   (station, time) float64 nan nan ...\n",
+       "    Snow Layer Temperature A              (station, time) float64 nan nan ...\n",
+       "    Snow Water Equivelent A               (station, time) float64 nan nan ...\n",
+       "    Total Pressure Unadjusted A           (station, time) float64 nan nan ...\n",
+       "    Upward Terrestrial Rad                (station, time) float64 nan nan ...\n",
+       "    Soil Temperature B                    (station, time) float64 nan nan ...\n",
+       "    Soil Moisture C                       (station, time) float64 nan nan ...\n",
+       "    Air Moisture Content A                (station, time) float64 nan nan ...\n",
+       "    Soil Temperature C                    (station, time) float64 nan nan ...\n",
+       "    Scalar Wind Speed A                   (station, time) float64 nan nan ...\n",
+       "    Snow Depth A                          (station, time) float64 nan nan ...\n",
+       "    Wind Direction at A                   (station, time) float64 nan nan ..."
       ]
      },
      "execution_count": 17,
@@ -494,7 +502,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -561,6 +578,36 @@
        "      <td>99</td>\n",
        "      <td>9999</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BWH</th>\n",
+       "      <td>99</td>\n",
+       "      <td>99</td>\n",
+       "      <td>9999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CRG</th>\n",
+       "      <td>99</td>\n",
+       "      <td>99</td>\n",
+       "      <td>9999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FRG</th>\n",
+       "      <td>99</td>\n",
+       "      <td>99</td>\n",
+       "      <td>9999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SIB</th>\n",
+       "      <td>99</td>\n",
+       "      <td>99</td>\n",
+       "      <td>9999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HLN</th>\n",
+       "      <td>99</td>\n",
+       "      <td>99</td>\n",
+       "      <td>9999</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -574,10 +621,15 @@
        "CRN        99     99           2205\n",
        "BRP        99     99           9999\n",
        "FLG        99     99           9999\n",
-       "PYT        99     99           9999"
+       "PYT        99     99           9999\n",
+       "BWH        99     99           9999\n",
+       "CRG        99     99           9999\n",
+       "FRG        99     99           9999\n",
+       "SIB        99     99           9999\n",
+       "HLN        99     99           9999"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -602,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -612,47 +664,46 @@
      "data": {
       "text/plain": [
        "<xarray.Dataset>\n",
-       "Dimensions:                           (station: 7, time: 131425)\n",
+       "Dimensions:                           (station: 12, time: 131425)\n",
        "Coordinates:\n",
-       "  * station                           (station) object 'BNS' 'CRN' 'FLG' ...\n",
+       "  * station                           (station) object 'BNS' 'BRP' 'BWH' ...\n",
        "  * time                              (time) datetime64[ns] 2012-09-30T18:00:00 ...\n",
        "    Elevation                         (station) int64 2099 2100 2330 2205 ...\n",
-       "    Lat                               (station) int64 99 99 99 99 99 99 99\n",
-       "    Lon                               (station) int64 99 99 99 99 99 99 99\n",
+       "    Lat                               (station) int64 99 99 99 99 99 99 99 ...\n",
+       "    Lon                               (station) int64 99 99 99 99 99 99 99 ...\n",
        "Data variables:\n",
-       "    AirMoistureContentA               (station, time) float64 nan nan nan ...\n",
-       "    IncrementalPrecipitationB         (station, time) float64 nan nan nan ...\n",
-       "    ScalarWindSpeedB                  (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureA                  (station, time) float64 nan nan nan ...\n",
-       "    SoilHeatFluxA                     (station, time) float64 nan nan nan ...\n",
-       "    TotalPressureUnadjustedA          (station, time) float64 nan nan nan ...\n",
-       "    SnowWaterEquivelentA              (station, time) float64 nan nan nan ...\n",
-       "    UpwardSolarRadiation              (station, time) float64 nan nan nan ...\n",
-       "    SnowDepthQCvalue                  (station, time) float64 nan nan nan ...\n",
-       "    UpwardTerrestrialRad              (station, time) float64 nan nan nan ...\n",
-       "    ScalarWindSpeedA                  (station, time) float64 nan nan nan ...\n",
-       "    IncrementalPrecipitationA         (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureB                     (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureC                  (station, time) float64 nan nan nan ...\n",
-       "    SnowDepthA                        (station, time) float64 nan nan nan ...\n",
-       "    DownwardTerrestrialRad            (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureC                     (station, time) float64 nan nan nan ...\n",
-       "    SnowLayerTemperatureA             (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureE                  (station, time) float64 nan nan nan ...\n",
-       "    NetRadiation                      (station, time) object nan nan nan nan ...\n",
-       "    SoilMoistureA                     (station, time) float64 nan nan nan ...\n",
-       "    DownwardSolarRadiation            (station, time) float64 nan nan nan ...\n",
-       "    WindDirectionatA                  (station, time) float64 nan nan nan ...\n",
-       "    TotalPressureAdjustedtoSea-level  (station, time) float64 nan nan nan ...\n",
-       "    AirtemperatureA                   (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureD                  (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureB                  (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureD                     (station, time) float64 nan nan nan ...\n",
        "    SoilMoistureE                     (station, time) float64 nan nan nan ...\n",
-       "    Albedo                            (station, time) object nan nan nan nan ..."
+       "    IncrementalPrecipitationA         (station, time) float64 nan nan nan ...\n",
+       "    AirtemperatureA                   (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureA                     (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureA                  (station, time) float64 nan nan nan ...\n",
+       "    DownwardTerrestrialRad            (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureB                     (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureD                  (station, time) float64 nan nan nan ...\n",
+       "    SoilHeatFluxA                     (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureD                     (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureE                  (station, time) float64 nan nan nan ...\n",
+       "    SnowDepthQCvalue                  (station, time) object nan nan nan nan ...\n",
+       "    UpwardSolarRadiation              (station, time) float64 nan nan nan ...\n",
+       "    IncrementalPrecipitationB         (station, time) float64 nan nan nan ...\n",
+       "    TotalPressureAdjustedtoSea-level  (station, time) float64 nan nan nan ...\n",
+       "    AirTemperatureC                   (station, time) float64 nan nan nan ...\n",
+       "    DownwardSolarRadiation            (station, time) float64 nan nan nan ...\n",
+       "    ScalarWindSpeedB                  (station, time) float64 nan nan nan ...\n",
+       "    SnowLayerTemperatureA             (station, time) float64 nan nan nan ...\n",
+       "    SnowWaterEquivelentA              (station, time) float64 nan nan nan ...\n",
+       "    TotalPressureUnadjustedA          (station, time) float64 nan nan nan ...\n",
+       "    UpwardTerrestrialRad              (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureB                  (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureC                     (station, time) float64 nan nan nan ...\n",
+       "    AirMoistureContentA               (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureC                  (station, time) float64 nan nan nan ...\n",
+       "    ScalarWindSpeedA                  (station, time) float64 nan nan nan ...\n",
+       "    SnowDepthA                        (station, time) float64 nan nan nan ...\n",
+       "    WindDirectionatA                  (station, time) float64 nan nan nan ..."
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
