--- a/Import_QCed_telemetry_to_netcdf_refactor.ipynb
+++ b/Import_QCed_telemetry_to_netcdf_refactor.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -351,35 +351,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Soil Moisture E\n",
-      "Incremental Precipitation A\n",
-      "Air temperature A\n",
-      "Soil Moisture A\n",
-      "Soil Temperature A\n",
-      "Downward Terrestrial Rad\n",
-      "Soil Moisture B\n",
-      "Soil Temperature D\n",
-      "Soil Heat Flux  A\n",
       "Soil Moisture D\n",
-      "Soil Temperature E\n",
-      "Snow Depth QC value\n",
-      "Upward Solar Radiation\n",
-      "Incremental Precipitation B\n",
-      "Total Pressure Adjusted to Sea-level\n",
-      "Air Temperature C\n",
-      "Downward Solar Radiation\n",
+      "Soil Moisture B\n",
+      "Soil Moisture C\n",
       "Scalar Wind Speed B\n",
       "Snow Layer Temperature A\n",
-      "Snow Water Equivelent A\n",
       "Total Pressure Unadjusted A\n",
-      "Upward Terrestrial Rad\n",
+      "Incremental Precipitation A\n",
+      "Downward Solar Radiation\n",
+      "Soil Moisture A\n",
+      "Downward Terrestrial Rad\n",
       "Soil Temperature B\n",
-      "Soil Moisture C\n",
-      "Air Moisture Content A\n",
-      "Soil Temperature C\n",
       "Scalar Wind Speed A\n",
+      "Soil Temperature A\n",
+      "Soil Temperature C\n",
+      "Air temperature A\n",
+      "Total Pressure Adjusted to Sea-level\n",
+      "Snow Water Equivelent A\n",
+      "Air Moisture Content A\n",
+      "Air Temperature C\n",
+      "Soil Temperature D\n",
+      "Soil Moisture E\n",
       "Snow Depth A\n",
-      "Wind Direction at A\n"
+      "Upward Solar Radiation\n",
+      "Upward Terrestrial Rad\n",
+      "Wind Direction at A\n",
+      "Soil Heat Flux  A\n",
+      "Snow Depth QC value\n",
+      "Soil Temperature E\n",
+      "Incremental Precipitation B\n"
      ]
     }
    ],
@@ -429,35 +429,35 @@
        "  * station                               (station) object 'BNS' 'BRP' 'BWH' ...\n",
        "  * time                                  (time) object 1349028000000000000 ...\n",
        "Data variables:\n",
-       "    Soil Moisture E                       (station, time) float64 nan nan ...\n",
-       "    Incremental Precipitation A           (station, time) float64 nan nan ...\n",
-       "    Air temperature A                     (station, time) float64 nan nan ...\n",
-       "    Soil Moisture A                       (station, time) float64 nan nan ...\n",
-       "    Soil Temperature A                    (station, time) float64 nan nan ...\n",
-       "    Downward Terrestrial Rad              (station, time) float64 nan nan ...\n",
-       "    Soil Moisture B                       (station, time) float64 nan nan ...\n",
-       "    Soil Temperature D                    (station, time) float64 nan nan ...\n",
-       "    Soil Heat Flux  A                     (station, time) float64 nan nan ...\n",
        "    Soil Moisture D                       (station, time) float64 nan nan ...\n",
-       "    Soil Temperature E                    (station, time) float64 nan nan ...\n",
-       "    Snow Depth QC value                   (station, time) object nan nan nan ...\n",
-       "    Upward Solar Radiation                (station, time) float64 nan nan ...\n",
-       "    Incremental Precipitation B           (station, time) float64 nan nan ...\n",
-       "    Total Pressure Adjusted to Sea-level  (station, time) float64 nan nan ...\n",
-       "    Air Temperature C                     (station, time) float64 nan nan ...\n",
-       "    Downward Solar Radiation              (station, time) float64 nan nan ...\n",
-       "    Scalar Wind Speed B                   (station, time) float64 nan nan ...\n",
-       "    Snow Layer Temperature A              (station, time) float64 nan nan ...\n",
-       "    Snow Water Equivelent A               (station, time) float64 nan nan ...\n",
-       "    Total Pressure Unadjusted A           (station, time) float64 nan nan ...\n",
-       "    Upward Terrestrial Rad                (station, time) float64 nan nan ...\n",
-       "    Soil Temperature B                    (station, time) float64 nan nan ...\n",
+       "    Soil Moisture B                       (station, time) float64 nan nan ...\n",
        "    Soil Moisture C                       (station, time) float64 nan nan ...\n",
-       "    Air Moisture Content A                (station, time) float64 nan nan ...\n",
-       "    Soil Temperature C                    (station, time) float64 nan nan ...\n",
+       "    Scalar Wind Speed B                   (station, time) float64 nan nan ...\n",
+       "    Snow Layer Temperature A              (station, time) object nan nan nan ...\n",
+       "    Total Pressure Unadjusted A           (station, time) float64 nan nan ...\n",
+       "    Incremental Precipitation A           (station, time) float64 nan nan ...\n",
+       "    Downward Solar Radiation              (station, time) float64 nan nan ...\n",
+       "    Soil Moisture A                       (station, time) float64 nan nan ...\n",
+       "    Downward Terrestrial Rad              (station, time) float64 nan nan ...\n",
+       "    Soil Temperature B                    (station, time) float64 nan nan ...\n",
        "    Scalar Wind Speed A                   (station, time) float64 nan nan ...\n",
+       "    Soil Temperature A                    (station, time) float64 nan nan ...\n",
+       "    Soil Temperature C                    (station, time) float64 nan nan ...\n",
+       "    Air temperature A                     (station, time) float64 nan nan ...\n",
+       "    Total Pressure Adjusted to Sea-level  (station, time) float64 nan nan ...\n",
+       "    Snow Water Equivelent A               (station, time) float64 nan nan ...\n",
+       "    Air Moisture Content A                (station, time) float64 nan nan ...\n",
+       "    Air Temperature C                     (station, time) float64 nan nan ...\n",
+       "    Soil Temperature D                    (station, time) float64 nan nan ...\n",
+       "    Soil Moisture E                       (station, time) float64 nan nan ...\n",
        "    Snow Depth A                          (station, time) float64 nan nan ...\n",
-       "    Wind Direction at A                   (station, time) float64 nan nan ..."
+       "    Upward Solar Radiation                (station, time) float64 nan nan ...\n",
+       "    Upward Terrestrial Rad                (station, time) float64 nan nan ...\n",
+       "    Wind Direction at A                   (station, time) float64 nan nan ...\n",
+       "    Soil Heat Flux  A                     (station, time) float64 nan nan ...\n",
+       "    Snow Depth QC value                   (station, time) object nan nan nan ...\n",
+       "    Soil Temperature E                    (station, time) float64 nan nan ...\n",
+       "    Incremental Precipitation B           (station, time) float64 nan nan ..."
       ]
      },
      "execution_count": 17,
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -629,7 +629,7 @@
        "HLN        99     99           9999"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -672,38 +672,38 @@
        "    Lat                               (station) int64 99 99 99 99 99 99 99 ...\n",
        "    Lon                               (station) int64 99 99 99 99 99 99 99 ...\n",
        "Data variables:\n",
-       "    SoilMoistureE                     (station, time) float64 nan nan nan ...\n",
-       "    IncrementalPrecipitationA         (station, time) float64 nan nan nan ...\n",
-       "    AirtemperatureA                   (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureA                     (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureA                  (station, time) float64 nan nan nan ...\n",
-       "    DownwardTerrestrialRad            (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureB                     (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureD                  (station, time) float64 nan nan nan ...\n",
-       "    SoilHeatFluxA                     (station, time) float64 nan nan nan ...\n",
        "    SoilMoistureD                     (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureE                  (station, time) float64 nan nan nan ...\n",
-       "    SnowDepthQCvalue                  (station, time) object nan nan nan nan ...\n",
-       "    UpwardSolarRadiation              (station, time) float64 nan nan nan ...\n",
-       "    IncrementalPrecipitationB         (station, time) float64 nan nan nan ...\n",
-       "    TotalPressureAdjustedtoSea-level  (station, time) float64 nan nan nan ...\n",
-       "    AirTemperatureC                   (station, time) float64 nan nan nan ...\n",
-       "    DownwardSolarRadiation            (station, time) float64 nan nan nan ...\n",
-       "    ScalarWindSpeedB                  (station, time) float64 nan nan nan ...\n",
-       "    SnowLayerTemperatureA             (station, time) float64 nan nan nan ...\n",
-       "    SnowWaterEquivelentA              (station, time) float64 nan nan nan ...\n",
-       "    TotalPressureUnadjustedA          (station, time) float64 nan nan nan ...\n",
-       "    UpwardTerrestrialRad              (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureB                  (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureB                     (station, time) float64 nan nan nan ...\n",
        "    SoilMoistureC                     (station, time) float64 nan nan nan ...\n",
-       "    AirMoistureContentA               (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureC                  (station, time) float64 nan nan nan ...\n",
+       "    ScalarWindSpeedB                  (station, time) float64 nan nan nan ...\n",
+       "    SnowLayerTemperatureA             (station, time) object nan nan nan nan ...\n",
+       "    TotalPressureUnadjustedA          (station, time) float64 nan nan nan ...\n",
+       "    IncrementalPrecipitationA         (station, time) float64 nan nan nan ...\n",
+       "    DownwardSolarRadiation            (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureA                     (station, time) float64 nan nan nan ...\n",
+       "    DownwardTerrestrialRad            (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureB                  (station, time) float64 nan nan nan ...\n",
        "    ScalarWindSpeedA                  (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureA                  (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureC                  (station, time) float64 nan nan nan ...\n",
+       "    AirtemperatureA                   (station, time) float64 nan nan nan ...\n",
+       "    TotalPressureAdjustedtoSea-level  (station, time) float64 nan nan nan ...\n",
+       "    SnowWaterEquivelentA              (station, time) float64 nan nan nan ...\n",
+       "    AirMoistureContentA               (station, time) float64 nan nan nan ...\n",
+       "    AirTemperatureC                   (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureD                  (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureE                     (station, time) float64 nan nan nan ...\n",
        "    SnowDepthA                        (station, time) float64 nan nan nan ...\n",
-       "    WindDirectionatA                  (station, time) float64 nan nan nan ..."
+       "    UpwardSolarRadiation              (station, time) float64 nan nan nan ...\n",
+       "    UpwardTerrestrialRad              (station, time) float64 nan nan nan ...\n",
+       "    WindDirectionatA                  (station, time) float64 nan nan nan ...\n",
+       "    SoilHeatFluxA                     (station, time) float64 nan nan nan ...\n",
+       "    SnowDepthQCvalue                  (station, time) object nan nan nan nan ...\n",
+       "    SoilTemperatureE                  (station, time) float64 nan nan nan ...\n",
+       "    IncrementalPrecipitationB         (station, time) float64 nan nan nan ..."
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
